--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".DetailFragment"
-    >
+    tools:context=".ui.detail.DetailFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,12 +38,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
+            android:fontFamily="@font/sdfont"
+            android:gravity="center"
             android:text="1V1OVIE"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:gravity="center"
-            android:fontFamily="@font/sdfont"
             app:layout_constraintBottom_toBottomOf="@id/detail_view"
             app:layout_constraintEnd_toEndOf="@id/detail_view"
             app:layout_constraintStart_toStartOf="@id/detail_view"
@@ -87,11 +86,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:fontFamily="@font/sdfont"
             android:text="Channel Name"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:fontFamily="@font/sdfont"
             app:layout_constraintStart_toEndOf="@id/detail_img_channel"
             app:layout_constraintTop_toTopOf="@id/detail_img_channel" />
 
@@ -100,10 +99,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/sdfont"
             android:text="구독자수"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:fontFamily="@font/sdfont"
             app:layout_constraintStart_toStartOf="@id/detail_txt_channel"
             app:layout_constraintTop_toBottomOf="@id/detail_txt_channel" />
 
@@ -111,16 +110,15 @@
             android:id="@+id/detail_txt_channel_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/sdfont"
             android:text="1.0K"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:fontFamily="@font/sdfont"
-            android:layout_marginStart="5dp"
-            app:layout_constraintTop_toTopOf="@id/detail_txt_channel_sub_info"
             app:layout_constraintBottom_toBottomOf="@id/detail_txt_channel_sub_info"
             app:layout_constraintStart_toEndOf="@id/detail_txt_channel_sub_info"
-            />
+            app:layout_constraintTop_toTopOf="@id/detail_txt_channel_sub_info" />
 
         <View
             android:id="@+id/detail_line_top"
@@ -158,12 +156,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="@font/sdfont"
                     android:paddingHorizontal="20dp"
                     android:text="Video Title"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:fontFamily="@font/sdfont"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -182,15 +180,14 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:fontFamily="@font/sdfont"
                     android:padding="20dp"
                     android:text="video Detail"
                     android:textColor="@color/black"
                     android:textSize="14sp"
-                    android:fontFamily="@font/sdfont"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/detail_txt_video_title"
                     app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/detail_txt_video_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
@@ -210,11 +207,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:fontFamily="@font/sdfont"
             android:text="Like"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:fontFamily="@font/sdfont"
             app:layout_constraintBottom_toBottomOf="@id/detail_btn_like"
             app:layout_constraintEnd_toEndOf="@id/detail_btn_like"
             app:layout_constraintStart_toStartOf="@id/detail_btn_like"
@@ -246,11 +243,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:fontFamily="@font/sdfont"
             android:text="Share"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:fontFamily="@font/sdfont"
             app:layout_constraintBottom_toBottomOf="@id/detail_btn_share"
             app:layout_constraintEnd_toEndOf="@id/detail_btn_share"
             app:layout_constraintStart_toStartOf="@id/detail_btn_share"
